<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/LightBlue">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/dialogLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etEmailAddress"
            android:hint="@string/email_address" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:text="@string/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnDialogLogin"
            android:layout_below="@+id/dialogLayout"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/Blue"/>
    </LinearLayout>

</RelativeLayout>