<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.loginscreen.LoginActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginButtons"
        android:layout_alignParentBottom="true">

        <Button
            android:text="@string/tumblr_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:layout_weight="1"
            android:backgroundTint="@color/Blue"
            android:onClick="onLoginClick" />

        <Button
            android:text="@string/tumblr_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp"
            android:backgroundTint="@color/Blue"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTumblrMotto"
        android:text="@string/tumblr_motto"
        android:layout_alignParentTop="true"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@mipmap/login_backsplash"
        android:id="@+id/imageView"
        android:layout_below="@+id/tvTumblrMotto"
        android:layout_above="@+id/loginButtons" />
</RelativeLayout>
